# openedx-ai-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: campaign-process.md
docs/playbooks/: celery.md  django.md  python.md
openedx_ai_agent/: __init__.py  campaign.py  classify.py  cli.py  config.py  discovery.py  drafts.py  review.py  state.py  worker.py
tests/: test_campaign.py  test_classify.py  test_discovery.py  test_drafts.py  test_review.py  test_state.py  test_worker.py
