[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openedx-ai-agent"
version = "0.1.0"
description = "AI-assisted upgrade campaigns for the Open edX ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Awais Qureshi", email = "awais.qureshi@arbisoft.com" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
oea = "openedx_ai_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openedx_ai_agent"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
